# yrlint

./: .gitignore  .yrlint.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  example-config.yml
.github/workflows/: ci.yml
examples/: bad_rule.yar  complex_rule.yar  good_rule.yar
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/linter/: mod.rs
src/linter/rules/: check_condition.rs  check_metadata.rs  check_naming.rs  check_strings.rs  check_structure.rs  mod.rs
src/output/: mod.rs
src/parser/: mod.rs
tests/: integration_test.rs  test_cli.rs  test_config.rs  test_individual_rules.rs  test_linter.rs  test_linter_rules.rs  test_output.rs  test_parser.rs  test_parser_edge_cases.rs
